# sre-agent

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  BLOGPOST.md  CODELAB.md  Dockerfile.agent  EXERCISES.md  LICENSE  README.md  agent_config.json  bootstrap.sh  cleanup.sh  cloudbuild.yaml  deploy.sh  docker-compose.yaml  pyproject.toml  simulate_incident.py
.claude/skills/drawio/: SKILL.md
agent/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  config.py  index.html  main.py  pyproject.toml  routes.py  test_a2ui_translator.py  test_firestore_strategy.py
agent/src/agent/: __init__.py  a2ui_translator.py  config.py  firestore_strategy.py  index.html  logging_config.py  main.py  routes.py
agent/test/: __init__.py  test_a2ui_translator.py
app/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
blogpost_assets/: architecture.mmd  cover.html  diagnosis-sequence.mmd  iam-least-privilege.mmd  postmortem-pipeline.mmd  readme-banner.html  trace-timeline.mmd
inventory_agent/: Dockerfile  cloudbuild.yaml  pyproject.toml
inventory_agent/src/inventory_agent/: __init__.py  config.py  discovery.py  firestore_strategy.py  main.py  routes.py
scratch_save_dir/: traj-4b49cf24ebca8e1bc55caef5c0e84929
skills/sre_incident_solver/: SKILL.md  gcp_tools.py  requirements.txt  sre_agent.py  sre_agent_service.py  sre_workflow.py
sre_agent/: Dockerfile  cloudbuild.yaml  pyproject.toml
sre_agent/src/sre_agent/: __init__.py  config.py  firestore_strategy.py  gcp_tools.py  itinerary.py  main.py  registry.py  routes.py  sre_workflow.py
sre_agent/test/: __init__.py  test_gcp_tools.py  test_itinerary.py  test_retry.py
sre_common/: pyproject.toml
sre_common/src/sre_common/: __init__.py  logging.py  middleware.py  otel.py  retry.py
