[project]
name = "sre-agent-codelab"
version = "0.1.0"
description = "SRE agent trace & log correlation codelab using Antigravity and ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-antigravity>=0.0.4",
    "google-adk>=1.28.1",
    "google-cloud-trace>=1.11.0",
    "google-cloud-logging>=3.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-google-cloud-trace>=1.24.0",
    "tabulate>=0.9.0",
]

[tool.uv]
managed = true
dev-dependencies = []
