[project]
name = "sre-chaos-monkey"
version = "0.1.0"
description = "SRE Chaos Monkey FastAPI Target Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
]
