[project]
name = "inventory-agent"
version = "0.1.0"
description = "GCP Infrastructure Topology Inventory Agent Service"
requires-python = ">=3.11"
dependencies = [
    "google-antigravity>=0.1.3",
    "google-cloud-firestore>=2.27.0",
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "sre-common",
]

[tool.uv.sources]
sre-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
