[project]
name = "sre-sub-agent"
version = "0.1.0"
description = "Antigravity Cloud SRE Diagnostics Agent Service"
requires-python = ">=3.11"
dependencies = [
    "google-antigravity>=0.1.3",
    "google-adk>=1.35.0",
    "google-cloud-trace>=1.19.0",
    "google-cloud-logging>=3.16.0",
    "google-cloud-firestore>=2.27.0",
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "sre-common",
]

[tool.uv.sources]
sre-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/sre_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
