[project]
name = "sre-common"
version = "0.1.0"
description = "Shared common utilities for SRE multi-agent workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "opentelemetry-sdk>=1.41.0",
    "google-cloud-logging>=3.16.0",
    "google-cloud-trace>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
